@@ -1,3 +1,7 @@
+2006-10-30 Tim
+ BUG: [ 1586836 ] Web: Translation status say 2.4 is still "latest stable"
+  Web\developer\l10n: status.php
+
 2006-10-23 Tim
  BUG: [ 1583164 ] Mismatch in Pad-file URL and URL in PAD-file
   Web: WinMergePAD.php
